# rust

./: APPLE_SILICON_OPTIONS.md  Cargo.toml  Dockerfile.macos  Dockerfile.macos-cross  Dockerfile.simple  IMPLEMENTATION_SUMMARY.md  MACOS_BUILD_GUIDE.md  MACOS_FIX_GUIDE.md  PLATFORM_GUIDE.md  README.md  RELEASE_PRACTICES.md  build-macos-cross.sh  build-macos-docker.sh  build-macos.sh  build-release.sh  create-macos-app.sh  docker-build.sh  docker-simple.sh  fix-macos-app.sh  sign-app.sh  test-docker-build.sh  timecard.json
.github/workflows/: release-improved.yml  release.yml
releases/: timecard-v1.0.0-linux-x86_64.sha256
src/: gui.rs  main.rs  models.rs  storage.rs
src/commands/: add.rs  clock.rs  list.rs  mod.rs  report.rs  status.rs
