[package]
name = "timecard"
version = "0.1.0"
edition = "2021"
authors = ["TimeCard Team <team@timecard.app>"]
description = "Simple time card management application"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations (part of std library)

# Terminal output
colored = "2.0"

# CSV handling
csv = "1.3"

# GUI (Egui)
eframe = "0.24"
egui = "0.24"

[dev-dependencies]
# Testing
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
